--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -8,6 +8,10 @@
 /* all desktop devices */
 @media only screen and (min-width : 993px) {
 
+	.row-filter>[class*='col-'] {
+		padding: 0 8px;
+	}
+
 	.left-sidebar > div {
 		margin-bottom: 24px;
 	}
